--- a/package.json
+++ b/package.json
@@ -11,6 +11,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongose": "0.0.2-security"
+    "mongoose": "^5.11.10"
   }
 }
